package com.chessonline
package multiplayer.rooms.domain

case class RoomName(value: String) extends AnyVal
